@@ -2,7 +2,6 @@ package fr.iglee42.cmr.jei;
 
 import com.simibubi.create.AllItems;
 import com.simibubi.create.AllRecipeTypes;
-import com.simibubi.create.Create;
 import com.simibubi.create.compat.jei.DoubleItemIcon;
 import com.simibubi.create.compat.jei.EmptyBackground;
 import com.simibubi.create.compat.jei.ItemIcon;
@@ -33,17 +32,12 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.crafting.Recipe;
-import net.minecraft.world.item.crafting.RecipeHolder;
-import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.ItemLike;
 
 import javax.annotation.Nonnull;
 import javax.annotation.ParametersAreNonnullByDefault;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -109,8 +103,7 @@ public class CMRJEI implements IModPlugin {
 	}
 
 
-
-	private class CategoryBuilder<T extends Recipe<? extends RecipeInput>> {
+	private class CategoryBuilder<T extends Recipe<?>> {
 		private final Class<? extends T> recipeClass;
 		private Predicate<CRecipes> predicate = cRecipes -> true;
 
@@ -129,7 +122,7 @@ public class CMRJEI implements IModPlugin {
 			return this;
 		}
 
-		public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBool> configValue) {
+		public CategoryBuilder<T> enableWhen(Function<CRecipes, ConfigBase.ConfigBool> configValue) {
 			predicate = c -> configValue.apply(c).get();
 			return this;
 		}
@@ -143,11 +136,11 @@ public class CMRJEI implements IModPlugin {
 			return addRecipeListConsumer(recipes -> recipes.addAll(collection.get()));
 		}
 
+		@SuppressWarnings("unchecked")
 		public CategoryBuilder<T> addAllRecipesIf(Predicate<Recipe<?>> pred) {
 			return addRecipeListConsumer(recipes -> consumeAllRecipes(recipe -> {
-				if (pred.test(recipe)) {
+				if (pred.test(recipe))
 					recipes.add((T) recipe);
-				}
 			}));
 		}
 
@@ -162,20 +155,17 @@ public class CMRJEI implements IModPlugin {
 		public CategoryBuilder<T> addTypedRecipes(IRecipeTypeInfo recipeTypeEntry) {
 			return addTypedRecipes(recipeTypeEntry::getType);
 		}
-		public <I extends RecipeInput, R extends Recipe<I>> CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<R>> recipeType) {
-			return addRecipeListConsumer(recipes -> CMRJEI.<T>consumeTypedRecipes(recipe -> {
-				if (recipeClass.isInstance(recipe.value()))
-					//noinspection unchecked - checked by if statement above
-					recipes.add((RecipeHolder<T>) recipe);
-			}, recipeType.get()));
+
+		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType) {
+			return addRecipeListConsumer(recipes -> CMRJEI.<T>consumeTypedRecipes(recipes::add, recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<T>> recipeType, Function<RecipeHolder<?>, RecipeHolder<T>> converter) {
+		public CategoryBuilder<T> addTypedRecipes(Supplier<RecipeType<? extends T>> recipeType, Function<Recipe<?>, T> converter) {
 			return addRecipeListConsumer(recipes -> CMRJEI.<T>consumeTypedRecipes(recipe -> recipes.add(converter.apply(recipe)), recipeType.get()));
 		}
 
-		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<RecipeHolder<?>> pred) {
-			return addRecipeListConsumer(recipes -> consumeTypedRecipesTyped(recipe -> {
+		public CategoryBuilder<T> addTypedRecipesIf(Supplier<RecipeType<? extends T>> recipeType, Predicate<Recipe<?>> pred) {
+			return addRecipeListConsumer(recipes -> CMRJEI.<T>consumeTypedRecipes(recipe -> {
 				if (pred.test(recipe)) {
 					recipes.add(recipe);
 				}
@@ -185,10 +175,10 @@ public class CMRJEI implements IModPlugin {
 		public CategoryBuilder<T> addTypedRecipesExcluding(Supplier<RecipeType<? extends T>> recipeType,
 																	 Supplier<RecipeType<? extends T>> excluded) {
 			return addRecipeListConsumer(recipes -> {
-				List<RecipeHolder<?>> excludedRecipes = getTypedRecipes(excluded.get());
-				consumeTypedRecipesTyped(recipe -> {
-					for (RecipeHolder<?> excludedRecipe : excludedRecipes) {
-						if (doInputsMatch(recipe.value(), excludedRecipe.value())) {
+				List<Recipe<?>> excludedRecipes = getTypedRecipes(excluded.get());
+				CMRJEI.<T>consumeTypedRecipes(recipe -> {
+					for (Recipe<?> excludedRecipe : excludedRecipes) {
+						if (doInputsMatch(recipe, excludedRecipe)) {
 							return;
 						}
 					}
@@ -220,7 +210,7 @@ public class CMRJEI implements IModPlugin {
 
 		public CategoryBuilder<T> catalyst(Supplier<ItemLike> supplier) {
 			return catalystStack(() -> new ItemStack(supplier.get()
-				.asItem()));
+					.asItem()));
 		}
 
 		public CategoryBuilder<T> icon(IDrawable icon) {
@@ -258,7 +248,7 @@ public class CMRJEI implements IModPlugin {
 					return recipes;
 				};
 			} else {
-				recipesSupplier = Collections::emptyList;
+				recipesSupplier = () -> Collections.emptyList();
 			}
 
 			CreateRecipeCategory.Info<T> info = new CreateRecipeCategory.Info<>(
@@ -268,28 +258,9 @@ public class CMRJEI implements IModPlugin {
 			allCategories.add(category);
 			return category;
 		}
-
-		private void consumeAllRecipesOfType(Consumer<RecipeHolder<T>> consumer) {
-			consumeAllRecipes(recipeHolder -> {
-				if (recipeClass.isInstance(recipeHolder.value())) {
-					//noinspection unchecked - this is checked by the if statement
-					consumer.accept((RecipeHolder<T>) recipeHolder);
-				}
-			});
-		}
-
-		private void consumeTypedRecipesTyped(Consumer<RecipeHolder<T>> consumer, RecipeType<?> type) {
-			consumeTypedRecipes(recipeHolder -> {
-				if (recipeClass.isInstance(recipeHolder.value())) {
-					//noinspection unchecked - this is checked by the if statement
-					consumer.accept((RecipeHolder<T>) recipeHolder);
-				}
-			}, type);
-		}
 	}
 
-
-	public static void consumeAllRecipes(Consumer<? super RecipeHolder<?>> consumer) {
+	public static void consumeAllRecipes(Consumer<Recipe<?>> consumer) {
 		Minecraft.getInstance()
 				.getConnection()
 				.getRecipeManager()
@@ -297,23 +268,23 @@ public class CMRJEI implements IModPlugin {
 				.forEach(consumer);
 	}
 
-	@SuppressWarnings({"unchecked", "rawtypes"})
-	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<RecipeHolder<?>> consumer, RecipeType<?> type) {
-		List<? extends RecipeHolder<?>> map = Minecraft.getInstance()
+	@SuppressWarnings("unchecked")
+	public static <T extends Recipe<?>> void consumeTypedRecipes(Consumer<T> consumer, RecipeType<?> type) {
+		Map<ResourceLocation, Recipe<?>> map = Minecraft.getInstance()
 				.getConnection()
-				.getRecipeManager().getAllRecipesFor((RecipeType) type);
-		if (!map.isEmpty())
-			map.forEach(consumer);
+				.getRecipeManager().recipes.get(type);
+		if (map != null)
+			map.values().forEach(recipe -> consumer.accept((T) recipe));
 	}
 
-	public static List<RecipeHolder<?>> getTypedRecipes(RecipeType<?> type) {
-		List<RecipeHolder<?>> recipes = new ArrayList<>();
+	public static List<Recipe<?>> getTypedRecipes(RecipeType<?> type) {
+		List<Recipe<?>> recipes = new ArrayList<>();
 		consumeTypedRecipes(recipes::add, type);
 		return recipes;
 	}
 
-	public static List<RecipeHolder<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<RecipeHolder<?>> exclusionPred) {
-		List<RecipeHolder<?>> recipes = getTypedRecipes(type);
+	public static List<Recipe<?>> getTypedRecipesExcluding(RecipeType<?> type, Predicate<Recipe<?>> exclusionPred) {
+		List<Recipe<?>> recipes = getTypedRecipes(type);
 		recipes.removeIf(exclusionPred);
 		return recipes;
 	}
@@ -326,13 +297,13 @@ public class CMRJEI implements IModPlugin {
 			return false;
 		}
 		ItemStack[] matchingStacks = recipe1.getIngredients()
-				.getFirst()
+				.get(0)
 				.getItems();
 		if (matchingStacks.length == 0) {
 			return false;
 		}
 		return recipe2.getIngredients()
-				.getFirst()
+				.get(0)
 				.test(matchingStacks[0]);
 	}
 
